compiler/testData/diagnostics/tests/cast/bare/UnrelatedColon.kt
// !CHECK_TYPE

trait Tr
trait G<T>

fun test(tr: Tr) = checkSubtype<<!WRONG_NUMBER_OF_TYPE_ARGUMENTS!>G<!>>(tr)